<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">Debter</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="rooms">MY ROOMS</string>
    <string name="credentials">Please enter your credentials</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="history">History</string>
    <string name="debts">Debts</string>
    <string name="go_back">Go back</string>
    <string name="included_members">INCLUDED MEMBERS</string>
    <string name="room">Room</string>
    <string name="room_settings">Room settings</string>
    <string name="my_rooms">My rooms</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_debts">My debts</string>
    <string name="menu_bank_accounts">Bank accounts</string>
    <string name="create_new_room">Create new room</string>
    <string name="log_out">Log out</string>
    <string name="action">Action</string>
    <string name="debt_to">to&#160;</string>
    <string name="mark_as_arranged">MARK AS ARRANGED</string>
    <string name="debt_arrange">Arrange</string>
    <string name="my_debts">MY DEBTS</string>
    <string name="all_debts">ALL DEBTS</string>
    <string name="order_by">Order by:</string>
    <string name="date">Date</string>
    <string name="your_data">Your data</string>
    <string name="you_are_included_in">You are included in</string>
    <string name="payments">payments</string>
    <string name="you_paid">You paid</string>
    <string name="in_total">in total</string>
    <string name="you_have">You have</string>
    <string name="debt">debt</string>
    <string name="rounding">Rounding</string>
    <string name="main_currency">Main currency</string>
    <string name="who_payed">Who payed?</string>
    <string name="how_much">How much?</string>
    <string name="included">Included</string>
    <string name="upload">Upload</string>
    <string name="title">Title</string>
    <string name="add_users">Add users</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="save_changes">Save changes</string>
    <string name="password_again">Password again</string>
    <string name="registration">Registration</string>
    <string name="room_activity">RoomActivity</string>
    <string name="home_activity">HomeActivity</string>
    <string name="login_activity">LoginActivity</string>
    <string name="debter">Debter.</string>

    <string-array name="rounding">
        <item>0.01</item>
        <item>0.1</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
    </string-array>

    <string-array name="currencies">
        <item>HUF</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>

</resources>
