<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/nav_my_rooms">

    <fragment
        android:id="@+id/nav_my_rooms"
        android:name="hu.bme.aut.debter.fragments.MyRoomsFragment"
        android:label="@string/my_rooms"
        tools:layout="@layout/fragment_my_rooms" />
    <fragment
        android:id="@+id/nav_new_room"
        android:name="hu.bme.aut.debter.fragments.NewRoomFragment"
        android:label="@string/create_new_room"
        tools:layout="@layout/fragment_new_room" />
    <fragment
        android:id="@+id/nav_my_debts"
        android:name="hu.bme.aut.debter.fragments.MyDebtsFragment"
        android:label="@string/menu_my_debts"
        tools:layout="@layout/fragment_my_debts" />

    <fragment
        android:id="@+id/nav_bank_accounts"
        android:name="hu.bme.aut.debter.fragments.BankAccountFragment"
        android:label="@string/menu_bank_accounts"
        tools:layout="@layout/fragment_bank_accounts" />


</navigation>