<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingVertical="20dp"
        >

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:text=""/>
        <TextView
            android:id="@+id/main_room_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text=""/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardElevation="0dp"
            app:cardCornerRadius="13dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:text="@string/your_data"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clipToPadding="false"
            app:cardElevation="8dp"
            android:layout_marginHorizontal="30dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/you_are_included_in"
                    />

                <TextView
                    android:id="@+id/included_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/payments"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                app:cardElevation="8dp"
                android:layout_marginVertical="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:text="@string/you_paid"
                        />

                    <TextView
                        android:id="@+id/total_payed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_marginVertical="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/in_total"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                app:cardElevation="8dp"
                android:layout_weight="1"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:text="@string/you_have"
                        />

                    <TextView
                        android:id="@+id/total_debts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_marginVertical="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/debt"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardElevation="0dp"
            app:cardCornerRadius="13dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:text="@string/menu_settings"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                app:cardElevation="8dp"
                android:layout_marginVertical="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:text="@string/rounding"
                        />

                    <TextView
                        android:id="@+id/main_rounding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_marginVertical="5dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                app:cardElevation="8dp"
                android:layout_weight="1"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:text="@string/main_currency"
                        />

                    <TextView
                        android:id="@+id/main_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_marginVertical="5dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_black_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>